project(libc)
add_library(${PROJECT_NAME} STATIC)

target_sources(${PROJECT_NAME}
  PRIVATE
  ./src/string/strncasecmp_l.c
  ./src/string/gnu_basename.c
  ./src/string/strpbrk.c
  ./src/string/strncasecmp.c
  ./src/string/wcsxfrm_l.c
  ./src/string/wmemmove.c
  ./src/string/wcscasecmp.c
  ./src/string/strdup.c
  ./src/string/explicit_bzero.c
  ./src/string/strstr.c
  ./src/string/wcswidth.c
  ./src/string/wcscasecmp_l.c
  ./src/string/strlwr.c
  ./src/string/wcsncasecmp.c
  ./src/string/timingsafe_memcmp.c
  ./src/string/memccpy.c
  ./src/string/bcmp.c
  ./src/string/xpg_strerror_r.c
  ./src/string/strncpy.c
  ./src/string/wcspbrk.c
  ./src/string/strchrnul.c
  ./src/string/wcsstr.c
  ./src/string/wcsnlen.c
  ./src/string/memcmp.c
  ./src/string/strtok.c
  ./src/string/index.c
  ./src/string/wcwidth.c
  ./src/string/memmem.c
  ./src/string/strcasecmp.c
  ./src/string/strncat.c
  ./src/string/swab.c
  ./src/string/wcsxfrm.c
  ./src/string/wcstok.c
  ./src/string/stpncpy.c
  ./src/string/ffsl.c
  ./src/string/wcsdup.c
  ./src/string/wcslcat.c
  ./src/string/wmemcpy.c
  ./src/string/rindex.c
  ./src/string/wcpncpy.c
  ./src/string/wmemcmp.c
  ./src/string/memchr.c
  ./src/string/ffsll.c
  ./src/string/wcsncasecmp_l.c
  ./src/string/strcasestr.c
  ./src/string/flsll.c
  ./src/string/strncmp.c
  ./src/string/wmempcpy.c
  ./src/string/wcschr.c
  ./src/string/wcscoll_l.c
  ./src/string/strcoll.c
  ./src/string/wcscoll.c
  ./src/string/wcsncat.c
  ./src/string/strerror_r.c
  ./src/string/wmemset.c
  ./src/string/wcsspn.c
  ./src/string/strsignal.c
  ./src/string/wcscpy.c
  ./src/string/stpcpy.c
  ./src/string/wcsrchr.c
  ./src/string/u_strerr.c
  ./src/string/memcpy.c
  ./src/string/wcscspn.c
  ./src/string/strndup_r.c
  ./src/string/strverscmp.c
  ./src/string/strnstr.c
  ./src/string/wcscat.c
  ./src/string/strxfrm_l.c
  ./src/string/strdup_r.c
  ./src/string/strsep.c
  ./src/string/timingsafe_bcmp.c
  ./src/string/wcsncmp.c
  ./src/string/strchr.c
  ./src/string/memset.c
  ./src/string/strnlen.c
  ./src/string/bcopy.c
  ./src/string/mempcpy.c
  ./src/string/wcsncpy.c
  ./src/string/strrchr.c
  ./src/string/strcspn.c
  ./src/string/wcslen.c
  ./src/string/memmove.c
  ./src/string/wcslcpy.c
  ./src/string/memrchr.c
  ./src/string/strlen.c
  ./src/string/strlcpy.c
  ./src/string/strcasecmp_l.c
  ./src/string/strcpy.c
  ./src/string/strcat.c
  ./src/string/bzero.c
  ./src/string/flsl.c
  ./src/string/wmemchr.c
  ./src/string/strlcat.c
  ./src/string/strupr.c
  ./src/string/wcscmp.c
  ./src/string/strtok_r.c
  ./src/string/strspn.c
  ./src/string/strcoll_l.c
  ./src/string/strcmp.c
  ./src/string/strerror.c
  ./src/string/strxfrm.c
  ./src/string/rawmemchr.c
  ./src/string/strndup.c
  ./src/string/fls.c
  ./src/string/wcpcpy.c
  ./src/misc/unctrl.c
  ./src/misc/lock.c
  ./src/misc/init.c
  ./src/misc/__dprintf.c
  ./src/misc/ffs.c
  ./src/misc/fini.c
  ./src/argz/argz_add.c
  ./src/argz/argz_count.c
  ./src/argz/envz_get.c
  ./src/argz/argz_create_sep.c
  ./src/argz/envz_add.c
  ./src/argz/argz_replace.c
  ./src/argz/buf_findstr.c
  ./src/argz/argz_add_sep.c
  ./src/argz/envz_merge.c
  ./src/argz/argz_stringify.c
  ./src/argz/argz_next.c
  ./src/argz/argz_append.c
  ./src/argz/argz_extract.c
  ./src/argz/envz_strip.c
  ./src/argz/argz_delete.c
  ./src/argz/argz_create.c
  ./src/argz/argz_insert.c
  ./src/argz/dummy.c
  ./src/argz/envz_entry.c
  ./src/argz/envz_remove.c
  ./src/syscalls/systimes.c
  ./src/syscalls/sysstat.c
  ./src/syscalls/syswrite.c
  ./src/syscalls/sysisatty.c
  ./src/syscalls/sysgetpid.c
  ./src/syscalls/sysclose.c
  ./src/syscalls/sysexecve.c
  ./src/syscalls/syslink.c
  ./src/syscalls/syssbrk.c
  ./src/syscalls/syskill.c
  ./src/syscalls/syswait.c
  ./src/syscalls/sysgettod.c
  ./src/syscalls/sysfcntl.c
  ./src/syscalls/sysopen.c
  ./src/syscalls/sysread.c
  ./src/syscalls/sysfork.c
  ./src/syscalls/syslseek.c
  ./src/syscalls/sysfstat.c
  ./src/syscalls/sysunlink.c
  ./src/posix/opendir.c
  ./src/posix/scandir.c
  ./src/posix/execle.c
  ./src/posix/posix_spawn.c
  ./src/posix/collcmp.c
  ./src/posix/execlp.c
  ./src/posix/collate.c
  ./src/posix/rewinddir.c
  ./src/posix/execvp.c
  ./src/posix/execl.c
  ./src/posix/regfree.c
  ./src/posix/closedir.c
  ./src/posix/regexec.c
  ./src/posix/popen.c
  ./src/posix/glob.c
  ./src/posix/sleep.c
  ./src/posix/_isatty.c
  ./src/posix/regcomp.c
  ./src/posix/readdir.c
  ./src/posix/telldir.c
  ./src/posix/regerror.c
  ./src/posix/creat.c
  ./src/posix/seekdir.c
  ./src/posix/usleep.c
  ./src/posix/readdir_r.c
  ./src/posix/execv.c
  ./src/posix/wordexp.c
  ./src/posix/fnmatch.c
  ./src/posix/wordfree.c
  ./src/signal/signal.c
  ./src/signal/raise.c
  ./src/signal/psignal.c
  ./src/search/hash_page.c
  ./src/search/hash.c
  ./src/search/hash_bigkey.c
  ./src/search/hash_log2.c
  ./src/search/hash_buf.c
  ./src/search/tdestroy.c
  ./src/search/tsearch.c
  ./src/search/hcreate.c
  ./src/search/hcreate_r.c
  ./src/search/tfind.c
  ./src/search/bsearch.c
  ./src/search/hash_func.c
  ./src/search/qsort_r.c
  ./src/search/tdelete.c
  ./src/search/qsort.c
  ./src/search/twalk.c
  ./src/search/bsd_qsort_r.c
  ./src/stdio/dprintf.c
  ./src/stdio/fwrite.c
  ./src/stdio/getc.c
  ./src/stdio/svfiprintf.c
  ./src/stdio/vscanf.c
  ./src/stdio/fiprintf.c
  ./src/stdio/vfwprintf.c
  ./src/stdio/diprintf.c
  ./src/stdio/rewind.c
  ./src/stdio/vsscanf.c
  ./src/stdio/fdopen.c
  ./src/stdio/fsetlocking.c
  ./src/stdio/mktemp.c
  ./src/stdio/asiprintf.c
  ./src/stdio/rename.c
  ./src/stdio/clearerr.c
  ./src/stdio/wprintf.c
  ./src/stdio/fiscanf.c
  ./src/stdio/vasiprintf.c
  ./src/stdio/feof.c
  ./src/stdio/siprintf.c
  ./src/stdio/tmpnam.c
  ./src/stdio/putchar.c
  ./src/stdio/fwide.c
  ./src/stdio/svfiscanf.c
  ./src/stdio/vfiscanf.c
  ./src/stdio/freopen.c
  ./src/stdio/vasnprintf.c
  ./src/stdio/fgetpos.c
  ./src/stdio/rget.c
  ./src/stdio/fscanf.c
  ./src/stdio/asniprintf.c
  ./src/stdio/fputc_u.c
  ./src/stdio/fcloseall.c
  ./src/stdio/fprintf.c
  ./src/stdio/fwprintf.c
  ./src/stdio/putc.c
  ./src/stdio/putchar_u.c
  ./src/stdio/fputwc.c
  ./src/stdio/fpurge.c
  ./src/stdio/vprintf.c
  ./src/stdio/setlinebuf.c
  ./src/stdio/flags.c
  ./src/stdio/ferror_u.c
  ./src/stdio/ftello.c
  ./src/stdio/fgets_u.c
  ./src/stdio/printf.c
  ./src/stdio/funopen.c
  ./src/stdio/fgetc.c
  ./src/stdio/sscanf.c
  ./src/stdio/getdelim.c
  ./src/stdio/putw.c
  ./src/stdio/vsniprintf.c
  ./src/stdio/fputws.c
  ./src/stdio/fsetpos.c
  ./src/stdio/svfscanf.c
  ./src/stdio/setbuffer.c
  ./src/stdio/findfp.c
  ./src/stdio/fgets.c
  ./src/stdio/putwchar_u.c
  ./src/stdio/fopencookie.c
  ./src/stdio/fgetwc_u.c
  ./src/stdio/fread_u.c
  ./src/stdio/asprintf.c
  ./src/stdio/fflush.c
  ./src/stdio/vfiprintf.c
  ./src/stdio/vasniprintf.c
  ./src/stdio/fgetws_u.c
  ./src/stdio/fclose.c
  ./src/stdio/gets.c
  ./src/stdio/ferror.c
  ./src/stdio/svfprintf.c
  ./src/stdio/vsnprintf.c
  ./src/stdio/iscanf.c
  ./src/stdio/stdio_ext.c
  ./src/stdio/getchar.c
  ./src/stdio/fopen.c
  ./src/stdio/fgetwc.c
  ./src/stdio/vasprintf.c
  ./src/stdio/getchar_u.c
  ./src/stdio/fputs_u.c
  ./src/stdio/vfscanf.c
  ./src/stdio/feof_u.c
  ./src/stdio/snprintf.c
  ./src/stdio/swscanf.c
  ./src/stdio/fgetws.c
  ./src/stdio/fseek.c
  ./src/stdio/getwc_u.c
  ./src/stdio/tmpfile.c
  ./src/stdio/fileno_u.c
  ./src/stdio/getwc.c
  ./src/stdio/fputs.c
  ./src/stdio/putwchar.c
  ./src/stdio/sprintf.c
  ./src/stdio/fputws_u.c
  ./src/stdio/siscanf.c
  ./src/stdio/putwc_u.c
  ./src/stdio/getc_u.c
  ./src/stdio/open_memstream.c
  ./src/stdio/fread.c
  ./src/stdio/getline.c
  ./src/stdio/vsiprintf.c
  ./src/stdio/vswprintf.c
  ./src/stdio/putc_u.c
  ./src/stdio/getwchar.c
  ./src/stdio/remove.c
  ./src/stdio/vdiprintf.c
  ./src/stdio/fwalk.c
  ./src/stdio/vwscanf.c
  ./src/stdio/setvbuf.c
  ./src/stdio/perror.c
  ./src/stdio/vswscanf.c
  ./src/stdio/ungetc.c
  ./src/stdio/iprintf.c
  ./src/stdio/fputc.c
  ./src/stdio/wsetup.c
  ./src/stdio/fseeko.c
  ./src/stdio/ungetwc.c
  ./src/stdio/setbuf.c
  ./src/stdio/makebuf.c
  ./src/stdio/swprintf.c
  ./src/stdio/fwscanf.c
  ./src/stdio/fgetc_u.c
  ./src/stdio/fvwrite.c
  ./src/stdio/viprintf.c
  ./src/stdio/vwprintf.c
  ./src/stdio/wscanf.c
  ./src/stdio/scanf.c
  ./src/stdio/getwchar_u.c
  ./src/stdio/fflush_u.c
  ./src/stdio/clearerr_u.c
  ./src/stdio/wbuf.c
  ./src/stdio/viscanf.c
  ./src/stdio/vsprintf.c
  ./src/stdio/asnprintf.c
  ./src/stdio/sccl.c
  ./src/stdio/getw.c
  ./src/stdio/puts.c
  ./src/stdio/fwrite_u.c
  ./src/stdio/vfprintf.c
  ./src/stdio/sniprintf.c
  ./src/stdio/ftell.c
  ./src/stdio/refill.c
  ./src/stdio/fmemopen.c
  ./src/stdio/putwc.c
  ./src/stdio/vsiscanf.c
  ./src/stdio/stdio.c
  ./src/stdio/vdprintf.c
  ./src/stdio/vfwscanf.c
  ./src/stdio/fputwc_u.c
  ./src/stdio/fileno.c
  ./src/reent/closer.c
  ./src/reent/statr.c
  ./src/reent/signgam.c
  ./src/reent/execr.c
  ./src/reent/mkdirr.c
  ./src/reent/isattyr.c
  ./src/reent/lseek64r.c
  ./src/reent/timesr.c
  ./src/reent/getreent.c
  ./src/reent/writer.c
  ./src/reent/renamer.c
  ./src/reent/linkr.c
  ./src/reent/openr.c
  ./src/reent/impure.c
  ./src/reent/gettimeofdayr.c
  ./src/reent/signalr.c
  ./src/reent/lseekr.c
  ./src/reent/reent.c
  ./src/reent/unlinkr.c
  ./src/reent/fstat64r.c
  ./src/reent/fcntlr.c
  ./src/reent/readr.c
  ./src/reent/stat64r.c
  ./src/reent/open64r.c
  ./src/reent/sbrkr.c
  ./src/reent/fstatr.c
  ./src/ssp/gets_chk.c
  ./src/ssp/stpcpy_chk.c
  ./src/ssp/memmove_chk.c
  ./src/ssp/snprintf_chk.c
  ./src/ssp/stack_protector.c
  ./src/ssp/sprintf_chk.c
  ./src/ssp/strcpy_chk.c
  ./src/ssp/memcpy_chk.c
  ./src/ssp/strncat_chk.c
  ./src/ssp/memset_chk.c
  ./src/ssp/vsnprintf_chk.c
  ./src/ssp/strcat_chk.c
  ./src/ssp/mempcpy_chk.c
  ./src/ssp/strncpy_chk.c
  ./src/ssp/stpncpy_chk.c
  ./src/ssp/chk_fail.c
  ./src/ssp/vsprintf_chk.c
  ./src/errno/errno.c
  ./src/locale/freelocale.c
  ./src/locale/lmessages.c
  ./src/locale/locale.c
  ./src/locale/lmonetary.c
  ./src/locale/newlocale.c
  ./src/locale/localeconv.c
  ./src/locale/nl_langinfo.c
  ./src/locale/uselocale.c
  ./src/locale/lnumeric.c
  ./src/locale/duplocale.c
  ./src/locale/lctype.c
  ./src/locale/timelocal.c
  ./src/unix/sigset.c
  ./src/unix/pread.c
  ./src/unix/ttyname_r.c
  ./src/unix/getut.c
  ./src/unix/getcwd.c
  ./src/unix/ttyname.c
  ./src/unix/pwrite.c
  ./src/unix/basename.c
  ./src/unix/dirname.c
  ./src/unix/getpass.c
  ./src/unix/getpwent.c
  ./src/unix/getlogin.c
  ./src/time/difftime.c
  ./src/time/clock.c
  ./src/time/gettzinfo.c
  ./src/time/gmtime_r.c
  ./src/time/tzlock.c
  ./src/time/ctime.c
  ./src/time/mktime.c
  ./src/time/strptime.c
  ./src/time/month_lengths.c
  ./src/time/lcltime_r.c
  ./src/time/asctime_r.c
  ./src/time/tzset.c
  ./src/time/strftime.c
  ./src/time/asctime.c
  ./src/time/tzvars.c
  ./src/time/gmtime.c
  ./src/time/ctime_r.c
  ./src/time/tzcalc_limits.c
  ./src/time/time.c
  ./src/time/wcsftime.c
  ./src/time/lcltime.c
  ./src/time/tzset_r.c
  ./src/stdlib/putenv_r.c
  ./src/stdlib/wcstoull.c
  ./src/stdlib/wcstoll_r.c
  ./src/stdlib/setenv_r.c
  ./src/stdlib/wcstold.c
  ./src/stdlib/mbsrtowcs.c
  ./src/stdlib/gdtoa-hexnan.c
  ./src/stdlib/assert.c
  ./src/stdlib/nrand48.c
  ./src/stdlib/mbrlen.c
  ./src/stdlib/atoi.c
  ./src/stdlib/calloc.c
  ./src/stdlib/dtoastub.c
  ./src/stdlib/ldiv.c
  ./src/stdlib/itoa.c
  ./src/stdlib/wcstod.c
  ./src/stdlib/wcstombs_r.c
  ./src/stdlib/wctob.c
  ./src/stdlib/arc4random_uniform.c
  ./src/stdlib/efgcvt.c
  ./src/stdlib/labs.c
  ./src/stdlib/mlock.c
  ./src/stdlib/seed48.c
  ./src/stdlib/__exp10.c
  ./src/stdlib/_Exit.c
  ./src/stdlib/getsubopt.c
  ./src/stdlib/environ.c
  ./src/stdlib/atoll.c
  ./src/stdlib/malignr.c
  ./src/stdlib/lrand48.c
  ./src/stdlib/mprec.c
  ./src/stdlib/msize.c
  ./src/stdlib/reallocf.c
  ./src/stdlib/mallinfor.c
  ./src/stdlib/erand48.c
  ./src/stdlib/mbrtowc.c
  ./src/stdlib/drand48.c
  ./src/stdlib/vallocr.c
  ./src/stdlib/llabs.c
  ./src/stdlib/reallocarray.c
  ./src/stdlib/random.c
  ./src/stdlib/wcstoul.c
  ./src/stdlib/abs.c
  ./src/stdlib/div.c
  ./src/stdlib/atol.c
  ./src/stdlib/__call_atexit.c
  ./src/stdlib/strtorx.c
  ./src/stdlib/strtol.c
  ./src/stdlib/valloc.c
  ./src/stdlib/wcrtomb.c
  ./src/stdlib/freer.c
  ./src/stdlib/mbstowcs.c
  ./src/stdlib/strtoull.c
  ./src/stdlib/rpmatch.c
  ./src/stdlib/mblen.c
  ./src/stdlib/wcstoll.c
  ./src/stdlib/strtodg.c
  ./src/stdlib/imaxdiv.c
  ./src/stdlib/eprintf.c
  ./src/stdlib/on_exit_args.c
  ./src/stdlib/wctomb.c
  ./src/stdlib/__adjust.c
  ./src/stdlib/strtoull_r.c
  ./src/stdlib/mtrim.c
  ./src/stdlib/strtoimax.c
  ./src/stdlib/ecvtbuf.c
  ./src/stdlib/strtold.c
  ./src/stdlib/strtoul.c
  ./src/stdlib/strtoll_r.c
  ./src/stdlib/mbtowc_r.c
  ./src/stdlib/atoff.c
  ./src/stdlib/mallocr.c
  ./src/stdlib/exit.c
  ./src/stdlib/wcstoull_r.c
  ./src/stdlib/wcstombs.c
  ./src/stdlib/a64l.c
  ./src/stdlib/mbsinit.c
  ./src/stdlib/wctomb_r.c
  ./src/stdlib/on_exit.c
  ./src/stdlib/__ten_mu.c
  ./src/stdlib/realloc.c
  ./src/stdlib/wcsnrtombs.c
  ./src/stdlib/mblen_r.c
  ./src/stdlib/quick_exit.c
  ./src/stdlib/nano-mallocr.c
  ./src/stdlib/msizer.c
  ./src/stdlib/wcstol.c
  ./src/stdlib/mbtowc.c
  ./src/stdlib/envlock.c
  ./src/stdlib/wcstoimax.c
  ./src/stdlib/strtoumax.c
  ./src/stdlib/atof.c
  ./src/stdlib/strtod.c
  ./src/stdlib/mbstowcs_r.c
  ./src/stdlib/getopt.c
  ./src/stdlib/cxa_atexit.c
  ./src/stdlib/dtoa.c
  ./src/stdlib/malign.c
  ./src/stdlib/ldtoa.c
  ./src/stdlib/cfreer.c
  ./src/stdlib/l64a.c
  ./src/stdlib/malloc.c
  ./src/stdlib/rand.c
  ./src/stdlib/__atexit.c
  ./src/stdlib/atexit.c
  ./src/stdlib/rand_r.c
  ./src/stdlib/jrand48.c
  ./src/stdlib/arc4random.c
  ./src/stdlib/mallstatsr.c
  ./src/stdlib/mstats.c
  ./src/stdlib/srand48.c
  ./src/stdlib/imaxabs.c
  ./src/stdlib/pvallocr.c
  ./src/stdlib/abort.c
  ./src/stdlib/strtoll.c
  ./src/stdlib/gdtoa-gethex.c
  ./src/stdlib/utoa.c
  ./src/stdlib/callocr.c
  ./src/stdlib/mrand48.c
  ./src/stdlib/mbsnrtowcs.c
  ./src/stdlib/putenv.c
  ./src/stdlib/wcsrtombs.c
  ./src/stdlib/wcstoumax.c
  ./src/stdlib/getenv.c
  ./src/stdlib/btowc.c
  ./src/stdlib/aligned_alloc.c
  ./src/stdlib/sb_charsets.c
  ./src/stdlib/system.c
  ./src/stdlib/reallor.c
  ./src/stdlib/lldiv.c
  ./src/stdlib/rand48.c
  ./src/stdlib/cxa_finalize.c
  ./src/stdlib/getenv_r.c
  ./src/stdlib/setenv.c
  ./src/stdlib/lcong48.c
  ./src/stdlib/malloptr.c
  ./src/platform/crt0.c
  ./src/ctype/isascii_l.c
  ./src/ctype/iswalnum_l.c
  ./src/ctype/iswgraph_l.c
  ./src/ctype/toascii.c
  ./src/ctype/wctype_l.c
  ./src/ctype/towupper.c
  ./src/ctype/toupper_l.c
  ./src/ctype/isdigit.c
  ./src/ctype/towupper_l.c
  ./src/ctype/isalpha.c
  ./src/ctype/wctrans_l.c
  ./src/ctype/iswxdigit_l.c
  ./src/ctype/isblank_l.c
  ./src/ctype/isascii.c
  ./src/ctype/iswxdigit.c
  ./src/ctype/ispunct.c
  ./src/ctype/isupper.c
  ./src/ctype/islower.c
  ./src/ctype/isalpha_l.c
  ./src/ctype/iswpunct_l.c
  ./src/ctype/towlower.c
  ./src/ctype/iswlower_l.c
  ./src/ctype/iswalpha_l.c
  ./src/ctype/iswdigit_l.c
  ./src/ctype/iswctype_l.c
  ./src/ctype/categories.c
  ./src/ctype/isupper_l.c
  ./src/ctype/ctype_.c
  ./src/ctype/tolower.c
  ./src/ctype/towctrans.c
  ./src/ctype/iswspace.c
  ./src/ctype/isalnum_l.c
  ./src/ctype/tolower_l.c
  ./src/ctype/iswctype.c
  ./src/ctype/iswprint.c
  ./src/ctype/iswupper.c
  ./src/ctype/iswblank.c
  ./src/ctype/iswalnum.c
  ./src/ctype/towlower_l.c
  ./src/ctype/iswpunct.c
  ./src/ctype/isdigit_l.c
  ./src/ctype/isprint.c
  ./src/ctype/wctrans.c
  ./src/ctype/isxdigit_l.c
  ./src/ctype/isalnum.c
  ./src/ctype/iswdigit.c
  ./src/ctype/isxdigit.c
  ./src/ctype/toupper.c
  ./src/ctype/iswprint_l.c
  ./src/ctype/islower_l.c
  ./src/ctype/wctype.c
  ./src/ctype/iscntrl.c
  ./src/ctype/iswgraph.c
  ./src/ctype/isspace_l.c
  ./src/ctype/iswblank_l.c
  ./src/ctype/isprint_l.c
  ./src/ctype/iswspace_l.c
  ./src/ctype/towctrans_l.c
  ./src/ctype/iswlower.c
  ./src/ctype/iscntrl_l.c
  ./src/ctype/toascii_l.c
  ./src/ctype/iswcntrl_l.c
  ./src/ctype/iswalpha.c
  ./src/ctype/isspace.c
  ./src/ctype/iswupper_l.c
  ./src/ctype/iswcntrl.c
  ./src/ctype/ispunct_l.c
  ./src/ctype/isblank.c
  ./src/ctype/jp2uc.c
)

target_sources(${PROJECT_NAME}
  PRIVATE ./src/platform/cpp.cpp
  )

target_include_directories(${PROJECT_NAME}
  PUBLIC include)
